# Analysis

./: README.md  loadLib.cc
CommonValues/: README.md
Event-track-selection/: README.md  Track-selection.md
Event-track-selection/HighwayAlgorithm/: README.md  swiss_highway.ipynb  swiss_highway.py  swiss_highway_data_2018_jun_24_reco.ipynb  swiss_highway_data_2018_jun_24_reco_functions.py
Event-track-selection/HighwayAlgorithm/ExampleOutput/: README.md  highway_algorithm_output_run840_subrun0.txt
Event-track-selection/HighwayAlgorithm/HighwayOutput/Run771/: box_charge_ratios_run771_subrun0.txt  box_charge_ratios_run771_subrun1.txt  box_charge_ratios_run771_subrun10.txt  box_charge_ratios_run771_subrun11.txt  box_charge_ratios_run771_subrun12.txt  box_charge_ratios_run771_subrun13.txt  box_charge_ratios_run771_subrun14.txt  box_charge_ratios_run771_subrun15.txt  box_charge_ratios_run771_subrun16.txt  box_charge_ratios_run771_subrun17.txt  box_charge_ratios_run771_subrun18.txt  box_charge_ratios_run771_subrun19.txt  box_charge_ratios_run771_subrun2.txt  box_charge_ratios_run771_subrun20.txt  box_charge_ratios_run771_subrun21.txt  box_charge_ratios_run771_subrun22.txt  box_charge_ratios_run771_subrun23.txt  box_charge_ratios_run771_subrun24.txt  box_charge_ratios_run771_subrun3.txt  box_charge_ratios_run771_subrun4.txt  box_charge_ratios_run771_subrun5.txt  box_charge_ratios_run771_subrun6.txt  box_charge_ratios_run771_subrun7.txt  box_charge_ratios_run771_subrun8.txt  box_charge_ratios_run771_subrun9.txt
Event-track-selection/HighwayAlgorithm/HighwayOutput/Run783/: box_charge_ratios_run783_subrun0.txt
Event-track-selection/HighwayAlgorithm/HighwayOutput/Run784/: box_charge_ratios_run784_subrun0.txt  box_charge_ratios_run784_subrun1.txt  box_charge_ratios_run784_subrun2.txt
Event-track-selection/HighwayAlgorithm/HighwayOutput/Run785/: box_charge_ratios_run785_subrun0.txt  box_charge_ratios_run785_subrun1.txt
Event-track-selection/HighwayAlgorithm/HighwayOutput/Run786/: box_charge_ratios_run786_subrun1.txt
Event-track-selection/HighwayAlgorithm/HighwayOutput/Run787/: box_charge_ratios_run787_subrun2.txt
Event-track-selection/HighwayAlgorithm/gridSub/: makefile.sh  submit.sub
database/: run_metadata_311.csv
dqdx/: CMakeLists.txt  dqdx.cc
efficency/: CMakeLists.txt  recoEff.cc
efficency/gridSub/: arguments.txt  make_file_list.sh  submit_eff.sub
efficency/production/: arguments.txt  make_file_list.sh  submit_eff.sub
include/: 311Lib.h  311style.h  CustomClasses_LinkDef.h  Cuts.hh  DataStructure.hh  Efficiency.hh  Fit.hh  Geometry.hh  Run.hh  Utils.hh
macro/: dQds.cc  loadLib.cc  recoEff.cc  rms.cc  trackCuts.cc
metadata/: test.db
noise/: CMakeLists.txt  fft.cc  noise.cc  noiseWithFilter.cc  rms.cc  signal-to-noise.cc
parseMC/: CMakeLists.txt  parseMC.cc
signal_to_noise/: CMakeLists.txt  caloAmp.cc  signalToNoise.cc
source/: 311Lib.cc  311style.cc  CMakeLists.txt  Cuts.cc  DataStructure.cc  Efficiency.cc  Fit.cc  Geometry.cc  Run.cc  Utils.cc
utils/: recoEff.cc  trackCuts.cc
(+558 files in other folders)
